# ProyectoALSE

./: CMakeLists.txt  create_db.cpp  delete_db.cpp  insert_db.cpp  select_db.cpp
Interfaz_Grafica/: CMakeLists.txt  CMakeLists.txt.user.7c6ed12  Interfaz_Grafica  db_local.cpp  db_local.h  informacion_base_de_datos.cpp  informacion_base_de_datos.h  informacion_base_de_datos.ui  interfaz.cpp  interfaz.ui  registro.cpp  registro.ui  test.db
Interfaz_Grafica/Interfaz_Grafica_autogen/: mocs_compilation.cpp
Interfaz_Grafica/Interfaz_Grafica_autogen/EWIEGA46WW/: moc_informacion_base_de_datos.cpp  moc_interfaz.cpp  moc_registro.cpp
Interfaz_Grafica/Interfaz_Grafica_autogen/include/: ui_informacion_base_de_datos.h  ui_interfaz.h  ui_registro.h
Project_Nuevo/: CMakeCache.txt  Makefile  Proyecto_F  Proyecto_F.cbp  cmake_install.cmake  db_ejemplo.pkl  db_local.cpp  db_local.h  main.cpp  test.db  test.db-journal
Project_Nuevo/html/: annotated.html  class_d_b___local-members.html  class_d_b___local.html  classes.html  db__local_8h_source.html  files.html  functions.html  functions_func.html
Project_Nuevo/html/search/: all_0.js  all_2.js  (+6 more)
Project_Nuevo/latex/: annotated.tex  class_d_b___local.tex  refman.tex
Proyecto/: README.md
Proyecto/Interfaz_Grafica/: CMakeCache.txt  Interfaz_Grafica  Makefile  cmake_install.cmake  db_local.cpp  interfaz.h  registro.cpp  registro.h  test.db
Proyecto/Project_Nuevo/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.7c6ed12  Makefile  Proyecto_F  cmake_install.cmake  db_local.cpp  db_local.h  main.cpp  main.cpp.autosave  test.db
(+19 files in other folders)
